--- a/index.html
+++ b/index.html
@@ -679,7 +679,7 @@
           <div class="row">
             <!-- contact-info-item  -->
             <div class="contact-info-item padd-15">
-              <a style="color: #00c88f" href="https://m.me/RHJihan" target="_blank">
+              <a style="color: #00c88f" href="https://m.me/itzrifat.rabbi" target="_blank">
                 <div class="icon">
                   <i class="fab fa-facebook-messenger"></i>
                   <h4>Say, Hi!</h4>
@@ -701,11 +701,11 @@
             <!-- contact-info-item end -->
             <!-- contact-info-item  -->
             <div class="contact-info-item padd-15">
-              <a style="color: #00c88f" target="_blank" href="http://scr.im/rhjihan">
+              <a style="color: #00c88f" target="_blank" href="http://scr.im/rhrabbi">
                 <div class="icon">
                   <i class="fa fa-envelope"></i>
                   <h4>Email Me</h4>
-                  <img style="display:inline; width:10em;" src='images/email.png'/>
+                  <img style="display:inline; width:10em;" src='images/email.jpg'/>
                 </div>
               </a>
             </div>
