--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
   <meta property="og:url" content="https://rhrabbi.github.io" />
   <meta property="og:title" content="About Me – Rifat" />
   <meta property="og:description" content="Don't know me? This page is the right place to find information about me." />
-  <meta property="og:image" content="https://rhrabbi.github.io/images/rhjihan.jpg" />
+  <meta property="og:image" content="https://rhrabbi.github.io/images/rifat.jpg" />
 
   <!-- Twitter -->
   <meta name="twitter:card" content="summary_large_image">
@@ -615,7 +615,7 @@
             <!-- wlink item End -->
             <!-- wlink item -->
             <div class="wlinks-item padd-15">
-              <a target="_blank" href="https://bn.quora.com/profile/Md-Rifat-Hasan-Jihan">
+              <a target="_blank" href="https://bn.quora.com/profile/Rifat-Hasan-Rabbi">
                 <div class="wlinks-item-inner">
                   <div class="icon"><i class="fab fa-quora"></i></div>
                   <h4>Quora</h4>
