--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
   <meta property="og:url" content="https://rhrabbi.github.io" />
   <meta property="og:title" content="About Me – Rifat" />
   <meta property="og:description" content="Don't know me? This page is the right place to find information about me." />
-  <meta property="og:image" content="https://rhrabbi.github.io/images/rifat.jpg" />
+  <meta property="og:image" content="https://github.com/RHRabbi/RHRabbi.github.io/blob/897f2e27832d5c8740dae331575799b3c3ef7bac/images/rifat.jpg" />
 
   <!-- Twitter -->
   <meta name="twitter:card" content="summary_large_image">
