--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
         <div class="container">
           <div class="intro">
             <img
-              src="/images/profile.jpg"
+              src="/images/rifat.jpg"
               alt="Rifat" class="shadow-dark" />
             <h3>Hello, I'm</h3>
             <h1>
