--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
                               <i class="fa fa-calendar"></i> 2014 - 2019
                             </h6>
                             <h4 class="timeline-title">
-                              Alir Bandar A M Secondery High School
+                              Alir Bandar A. M. High School
                             </h4>
                           </div>
                           <!-- timeline Item End -->
