--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
               alt="Rifat" class="shadow-dark" />
             <h3>Hello, I'm</h3>
             <h1>
-              Md. Rifat Hasan
+              Rifat Hasan
               <span style="color: #00c88f; font-size: 40px; font-weight: 700">Rabbi</span>
             </h1>
             <span class="iTyped"></span>
