--- a/index.html
+++ b/index.html
@@ -442,7 +442,7 @@
             <div class="portfolio-item padd-15" data-category="3d-design">
               <div class="portfolio-item-inner shadow-dark">
                 <div class="portfolio-img">
-                  <img src="images/portfolio/8.jpg" alt="3d-design" />
+                  <img src="images/portfolio/8.png" alt="3d-design" />
                 </div>
                 <div class="portfolio-info">
                   <h4>3D Design</h4>
@@ -453,38 +453,7 @@
               </div>
             </div>
             <!-- Portfolio Item End -->
-            <!-- Portfolio Item -->
-            <div class="portfolio-item padd-15" data-category="3d-design">
-              <div class="portfolio-item-inner shadow-dark">
-                <div class="portfolio-img">
-                  <img src="images/portfolio/9.jpg" alt="3d-design" />
-                </div>
-                <div class="portfolio-info">
-                  <h4>3D Design</h4>
-                  <div class="icon">
-                    <i class="fa fa-search-plus"></i>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <!-- Portfolio Item End -->
-            <!-- Portfolio Item -->
-            <div class="portfolio-item padd-15" data-category="web-dev">
-              <a target="_blank" href="https://caders-kuet.github.io/"><i class="fas fa-external-link-alt"></i>
-                caders-kuet.github.io</a>
-              <div class="portfolio-item-inner shadow-dark">
-                <div class="portfolio-img">
-                  <img src="images/portfolio/10.jpg" alt="web-dev" />
-                </div>
-                <div class="portfolio-info">
-                  <h4>Web Development</h4>
-                  <div class="icon">
-                    <i class="fa fa-search-plus"></i>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <!-- Portfolio Item End -->
+           
           </div>
           <div class="buttons padd-15" style="text-align: center">
             <!-- <a href="#" class="btn">Download CV</a> -->
@@ -656,7 +625,7 @@
             <!-- wlink item End -->
             <!-- wlink item -->
             <div class="wlinks-item padd-15">
-              <a target="_blank" href="https://www.google.com/search?q=Rifat+Hasan+Rabb">
+              <a target="_blank" href="https://www.google.com/search?q=Rifat+Hasan+Rabbi">
                 <div class="wlinks-item-inner">
                   <div class="icon"><i class="fa fa-google"></i></div>
                   <h4>Google search</h4>
@@ -705,7 +674,6 @@
                 <div class="icon">
                   <i class="fa fa-envelope"></i>
                   <h4>Email Me</h4>
-                  <img style="display:inline; width:10em;" src='images/email.jpg'/>
                 </div>
               </a>
             </div>
